--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -3012,14 +3012,17 @@ Error text: {1}</value>
   <data name="MergeOptions_ShowContents" xml:space="preserve">
     <value>Show Contents in Content View</value>
   </data>
-   <data name="filterCSVAndTXT" xml:space="preserve">
-    <value>Csv, Txt file(*.csv;*.txt)|*.csv;*.txt</value>
+   <data name="FilterImportTOC" xml:space="preserve">
+    <value>Xml,Csv, Txt file(*.xml;*.csv;*.txt)|*.xml;*.csv;*.txt</value>
     <comment>File dialog</comment>
   </data>
   <data name="NoSectionsInBook" xml:space="preserve">
     <value>There are no sections in book to import TOC</value>
   </data>
   <data name="LessSectionsInBook" xml:space="preserve">
-    <value>There are less sections in book so whole TOC will not import</value>
+    <value>Existing sections in book are less so full TOC will not import</value>
+  </data>
+  <data name="FileInUse" xml:space="preserve">
+    <value>This file is being used by other process.Please close all applications using this file and try again</value>
   </data>
 </root>
